# starlark-to-nbt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: component-catalog.md
examples/: church.star  claude_pergola.star  cottage.star  frontier_outpost.star  keep.star  market_square.star  medieval_manor.star  mega_castle.star  procedural_crystal_cave.star  procedural_facade.star  procedural_fractal_tree.star  procedural_pavilion.star  procedural_rotunda.star  procedural_spiral_stair.star  procedural_twisting_spire.star  procedural_ziggurat.star  rampart_ward.star  riverside_farmstead.star  stone_pass_fortress.star
lib/: dwellings.star  fixtures.star  fortifications.star  openings.star  outdoor.star  roofs.star  showcase.star  structural.star
scripts/: rebuild_examples.sh
src/starlark_to_nbt/: __init__.py  cli.py  execute.py  ir.py  layout.py  lowering.py  model.py  pipeline.py  schema.py  serialize.py  starlark_runtime.py
tests/: test_end_to_end.py  test_entities.py  test_library.py  test_rotation_states.py  test_runtime_load.py  test_schema_layout.py  test_transform_execution.py
